--- a/app/views/subjects/examples.html.erb
+++ b/app/views/subjects/examples.html.erb
@@ -1,5 +1,5 @@
-<% width = 800.0 %>
-<% height = 400.0 %>
+<% width = Milkman::Application.config.image["width"] %>
+<% height = Milkman::Application.config.image["height"] %>
 <% @hex =  Milkman::Application.config.hex %>
 <% @types = Milkman::Application.config.types %>
 
