--- a/app/views/subjects/raw.html.erb
+++ b/app/views/subjects/raw.html.erb
@@ -1,6 +1,6 @@
 <% scale = 0.597 %>
-<% width = 800.0*scale %>
-<% height = 400.0*scale %>
+<% width = Milkman::Application.config.image["width"]*scale %>
+<% height = Milkman::Application.config.image["height"]*scale %>
 <% @hex =  Milkman::Application.config.hex %>
 <% @types = Milkman::Application.config.types %>
 
@@ -8,9 +8,9 @@
   <image xlink:href="<%= @s.image %>" preserveAspectRatio="xMidYMid meet" width="<%= width %>" height="<%= height %>"/>
   <% count = 0 %>
   <% @raw.each do |d| %>
-    <% colour = @hex[d["name"]] %>
-    <ellipse cx="<%= d["center"][0].to_f*scale %>" cy="<%= d["center"][1].to_f*scale %>" rx="<%= d["rx"].to_f*scale %>" ry="<%= d["ry"].to_f*scale %>" fill="#000000" stroke="<%= colour %>" fill-opacity="0" stroke-width="<%= 4*scale %>" tabindex="0" opacity="0.2" transform="rotate(<%= d["angle"] %>, <%= d["center"][0].to_f*scale %>, <%= d["center"][1].to_f*scale %>)" ></ellipse>
+    <% colour = @hex[d["type"]] %>
+    <ellipse cx="<%= d["source"][0].to_f*scale %>" cy="<%= d["source"][1].to_f*scale %>" rx="<%= d["radius1"].to_f*scale %>" ry="<%= d["radius2"].to_f*scale %>" fill="#000000" stroke="<%= colour %>" fill-opacity="0" stroke-width="<%= 4*scale %>" tabindex="0" opacity="0.2" transform="rotate(<%= d["angle"] %>, <%= d["source"][0].to_f*scale %>, <%= d["source"][1].to_f*scale %>)" ></ellipse>
     <% count+=1 %>
   <% end %>
-  <text fill="#ffffff" stroke="none" font="10px &quot;Arial&quot;" text-anchor="left" y="<%= 384*scale %>" x="<%= 10*scale %>" >Raw Drawings</text>
+  <text fill="#ffffff" stroke="none" font="10px &quot;Arial&quot;" text-anchor="left" y="<%= 632*scale %>" x="<%= 10*scale %>" >Raw Drawings</text>
 </svg>
