--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,6 +1,6 @@
-<% scale = 1.2 %>
-<% width = 800.0*scale %>
-<% height = 400.0*scale %>
+<% scale = 960.0/Milkman::Application.config.image["width"] %>
+<% width = Milkman::Application.config.image["width"]*scale %>
+<% height = Milkman::Application.config.image["height"]*scale %>
 <% @hex =  Milkman::Application.config.hex %>
 <% @types = Milkman::Application.config.types %>
 
@@ -20,7 +20,8 @@
     <% @results.each do |type,res| %>
       <% res["signal"].each do |k,arr| %>
         <% arr.each do |d| %>
-          <ellipse cx="<%= d["x"]*scale %>" cy="<%= d["y"]*scale %>" rx="<%= d["rx"]*scale %>" ry="<%= d["ry"]*scale %>" <%= type %>="<%= k %>" fill="#000000" stroke="white" fill-opacity="0" stroke-width="2" tabindex="0" opacity="0"  transform="rotate(<%= d["angle"] %>, <%= d["x"]*scale %>, <%= d["y"]*scale %>)"></ellipse>
+          <%- @obj = [d, @s.zooniverse_id, scale, "#ffffff", k, false] -%>
+          <%= render partial: "#{type}", obj: @obj %>
         <% end %>
       <% end %>
     <% end %>
@@ -28,8 +29,8 @@
     <% @results.each do |type,res| %>
       <% count = 0 %>
       <% res["reduced"].each do |d| %>
-        <ellipse cx="<%= d["x"]*scale %>" cy="<%= d["y"]*scale %>" rx="<%= d["rx"]*scale %>" ry="<%= d["ry"]*scale %>" fill="#000000" stroke="white" fill-opacity="0" stroke-width="4" tabindex="0" opacity="0.5" transform="rotate(<%= d["angle"] %>, <%= d["x"]*scale %>, <%= d["y"]*scale %>)" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= type %>=<%= count %>]').css('opacity', '0');" ></ellipse>
-        <ellipse cx="<%= d["x"]*scale %>" cy="<%= d["y"]*scale %>" rx="<%= d["rx"]*scale %>" ry="<%= d["ry"]*scale %>" fill="#000000" stroke="<%= @hex[type] %>" fill-opacity="0" stroke-width="2" tabindex="0" opacity="1.0" transform="rotate(<%= d["angle"] %>, <%= d["x"]*scale %>, <%= d["y"]*scale %>)" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= type %>=<%= count %>]').css('opacity', '0');" ></ellipse>
+        <%- @obj = [d, @s.zooniverse_id, scale, @hex[type], count, true] -%>
+        <%= render partial: "#{type}", obj: @obj %>
         <% count+=1 %>
       <% end %>
     <% end %>
@@ -54,8 +55,7 @@
          <% @results.each do |type,res| %>
         <% res["reduced"].each do |a| %>
         <% row+=1 %>
-          <tr class="<%= row%2==0 ? "even" : "odd" %>" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= type
-            %>=<%= count %>]').css('opacity', '0');">
+          <tr class="<%= row%2==0 ? "even" : "odd" %>" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity','0.5');" onmouseout="$('[<%= type %>=<%= count %>]').css('opacity','0');">
             <td> <%= @types.key(type) %></td>
             <td> <%= sprintf "%.4f", a["glon"] %> &plusmn; <%= sprintf "%.4f", a["quality"]["qglon"] %></td>
             <td> <%= sprintf "%.4f", a["glat"] %> &plusmn; <%= sprintf "%.4f", a["quality"]["qglat"] %></td>
@@ -71,17 +71,6 @@
       </table>
       <div style="clear:both;"></div>
   </div>
-
-  <div id="simbad-<%= @s.zooniverse_id %>" class="simbad-holder"></div>
-  <script type="text/javascript">
-    $.ajax({
-      url: "/subjects/simbad/<%= @s.zooniverse_id %>",
-      cache: false,
-      success: function(html){
-        $("#simbad-<%= @s.zooniverse_id %>").append(html);
-      }
-    });
-  </script>
 
   <div id="raw-<%= @s.zooniverse_id %>" class="raw-holder"></div>
   <script type="text/javascript">
