--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Martian Milkman</title>
-    <%= stylesheet_link_tag "main" %>
+  <title><%= Milkman::Application.config.project["name"] %></title>
+  <%= stylesheet_link_tag "main" %>
   <%= stylesheet_link_tag "mwp-styles" %>
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-  <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag "jquery" %>
-  <%= javascript_include_tag "jquery_ujs" %>
+  
+  <style>
+    input { color: <%= Milkman::Application.config.project["styles"]["action"] %>; }
+    #randomButton, #frameChanger { background-color: <%= Milkman::Application.config.project["styles"]["action"] %>; }
+    #randomButton:hover, #frameChanger:hover, button:hover { background-color: <%= Milkman::Application.config.project["styles"]["action_hover"] %>; }
+    a { color: <%= Milkman::Application.config.project["styles"]["action"] %> }
+    tr.table-header, tr.header { background-color: <%= Milkman::Application.config.project["styles"]["accent"] %> }
+    .preview-link { background-color: <%= Milkman::Application.config.project["styles"]["action"] %>; }
+    .preview-link:hover { background-color: <%= Milkman::Application.config.project["styles"]["action_hover"] %>; }
+  </style>
+
+  <%= javascript_include_tag "jquery.1.9.1.min" %>
+  <%= javascript_include_tag "jquery.svg.min" %>
   <%= csrf_meta_tag %>
 
   <script type="text/javascript">
   $( document ).ready(function() {
     function goToSearch(){
       q = $('#searchID').val();
-      if (q.indexOf("AMW")>=0 && q.length==10) {
+      if (q.indexOf("A")>=0 && q.length==10) {
         console.log("Searching for Zooniverse ID "+q);
         window.location = ('/subjects/'+$('#searchID').val());
       } else if (q.split(" ").length==2 && !isNaN(parseFloat(q.split(" ")[0])) && !isNaN(parseFloat(q.split(" ")[1]))) {
@@ -59,7 +69,7 @@
 <h1><a href="/"><%= @pagetitle %></a></h1>
 
 <div id="search-buttons">
-  <input type="textbox" id="searchID" value="e.g. 'AMW0002t48' or '351.0 0.70'" onfocus="$('#searchID').val('');" onblur="$('#searchID').filter(function() { return $(this).val() == ''; }).val(\"e.g. 'AMW0002t48' or '351.0 0.70'\");" />
+  <input type="textbox" id="searchID" value="e.g. '<%= Milkman::Application.config.project["example_zoo_id"] %>'" onfocus="$('#searchID').val('');" onblur="$('#searchID').filter(function() { return $(this).val() == ''; }).val(\"e.g. '<%= Milkman::Application.config.project["example_zoo_id"] %>'\");" />
   <button id="searchButton" type="submit">Search</button>
   <button id="randomButton" type="submit">Random Image</button>
 </div>
@@ -67,7 +77,7 @@
 <%= yield %>
 
 <div id="footer">
-  <h3>Martian Milkman delivers data for Zooniverse's <a href="http://www.planetfour.org">Planet Four</a></h3>
+<h3>Milkman delivers data for the Zooniverse's <a href="http://www.<%= Milkman::Application.config.project["url"] %>"><%= Milkman::Application.config.project["project"] %></a> site</h3>
   <small>
   Includes <%= number_with_delimiter(Classification.size) %> classifications up to <%= Classification.most_recent.created_at.to_formatted_s(:long_ordinal) %>
   <br/>
