--- a/app/views/subjects/preview.html.erb
+++ b/app/views/subjects/preview.html.erb
@@ -1,31 +1,27 @@
 <% scale = 288/Milkman::Application.config.project["image"]["width"] %>
 <% width = Milkman::Application.config.project["image"]["width"]*scale %>
 <% height = Milkman::Application.config.project["image"]["height"]*scale %>
-<% @hex =  Milkman::Application.config.project["hex"] %>
-<% @types = Milkman::Application.config.project["types"] %>
+<% @types = Milkman::Application.config.project["object_types"] %>
 
 <div class="subject-preview">
 <svg height="<%= height %>" version="1.1" width="<%= width %>" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 <%= width %> <%= height %>" preserveAspectRatio="xMinYMin" style="overflow: hidden; position: relative;">
   <%- @opts = [@s.image, width, height] -%>
   <%= render partial: "image", obj: @opts %>
 
-  <% @results.each do |type,res| %>
-    <% res["signal"].each do |k,arr| %>
-      <% arr.each do |d| %>
-          <%- @obj = [d, @s.zooniverse_id, scale, "#ffffff", k, "signal"] -%>
-          <%= render partial: "#{type}", obj: @obj %>
+    <% @results.each do |type,res| %>
+      <% res["reduced"].each_with_index do |d,i| %>
+        
+        <% d["signal"].each do |a| %>
+            <%- @obj = [a, @s.zooniverse_id, scale, "#ffffff", i, "signal"] -%>
+            <%= render partial: "#{type}", obj: @obj %>
+        <% end %>
+
+        <%- @obj = [d, @s.zooniverse_id, scale, @types[type]["hex"], i, "reduced"] -%>
+        <%= render partial: "#{type}", obj: @obj %>
+
       <% end %>
     <% end %>
-  <% end %>
-
-  <% @results.each do |type,res| %>
-    <% count = 0 %>
-    <% res["reduced"].each do |d| %>
-        <%- @obj = [d, @s.zooniverse_id, scale, "#ffffff", count, "reduced"] -%>
-        <%= render partial: "#{type}", obj: @obj %>
-      <% count+=1 %>
-    <% end %>
-  <% end %>
+    
 </svg>
 </div>
 <a title="Explore Image" href="/subjects/<%= @s.zooniverse_id %>" class="preview-link">&rarr;</a>
