--- a/app/views/subjects/_adult.html.erb
+++ b/app/views/subjects/_adult.html.erb
@@ -9,7 +9,7 @@
 <%- tag = kind=="signal" ? "adult=#{zoo_id}-#{count}" : "" -%>
 <%- funcs = kind=="reduced" ? "onmouseover=$('[adult=#{zoo_id}-#{count}]').css('opacity','1.0'); onmouseout=$('[adult=#{zoo_id}-#{count}]').css('opacity','0');" : "" -%>
 <%- opacity = (kind=="reduced" || kind=="raw") ? 0.5 : 0 -%>
-
+<%- puts obj, kind -%>
 <ellipse cx="<%= obj["x"]*scale %>" cy="<%= obj["y"]*scale %>" rx="10" ry="10" fill="#000000" stroke="#FFFFFF" fill-opacity="0" stroke-width="<%= 3*scale %>" tabindex="0" opacity="<%= opacity %>" <%= funcs %> <%= tag %> frame="<%= obj["frame"].to_i %>" ></ellipse>
 
 <ellipse cx="<%= obj["x"]*scale %>" cy="<%= obj["y"]*scale %>" rx="10" ry="10" fill="#000000" stroke="<%= col %>" fill-opacity="0" stroke-width="<%= 2*scale %>" tabindex="0" opacity="<%= opacity %>" <%= funcs %> <%= tag %> frame="<%= obj["frame"].to_i %>" ></ellipse>
