--- a/app/views/subjects/raw.html.erb
+++ b/app/views/subjects/raw.html.erb
@@ -1,6 +1,7 @@
 <% scale = 0.597 %>
 <% width = Milkman::Application.config.project["image"]["width"]*scale %>
 <% height = Milkman::Application.config.project["image"]["height"]*scale %>
+<% @types = Milkman::Application.config.project["object_types"] %>
 
 <script type="text/javascript">
     $( document ).ready(function( $ ) {
@@ -12,14 +13,13 @@
 <svg height="<%= height %>" version="1.1" width="<%= width %>" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 <%= width %> <%= height %>" preserveAspectRatio="xMinYMin" style="overflow: hidden; position: relative;">
   <%- @opts = [@s.image, width, height] -%>
   <%= render partial: "image", obj: @opts %>
-	<%- count=0 -%>
-	<%- Milkman::Application.config.project["object_types"].each do |type| -%>
-	<%- @raw.annotations[type]["raw"].each do |d| -%>
-		<%- new_d = {"x"=>d[0], "y"=>d[1], "frame"=>d[2]} -%>
-		<%- @obj = [new_d, @s.zooniverse_id, scale, Milkman::Application.config.project["hex"][type], count, "raw"] -%>
-        <%= render partial: "#{type}", obj: @obj %>
-		<%- count+=1 -%>
-	<%- end -%>
+	<%- Milkman::Application.config.project["object_types"].keys.each do |type| -%>
+		<%- @raw.annotations[type]["raw"].each_with_index do |d,i| -%>
+		
+			<%- @obj = [d, @s.zooniverse_id, scale, @types[type]["hex"], i, "raw"] -%>
+	        <%= render partial: "#{type}", obj: @obj %>
+		
+		<%- end -%>
 	<%- end -%>
   <text fill="#ffffff" stroke="none" font="10px &quot;Arial&quot;" text-anchor="left" y="<%= (Milkman::Application.config.project["image"]["height"]-15)*scale %>" x="<%= 10*scale %>" >Raw Drawings</text>
 </svg>
